Updated jSymbolic table to prevent cutoff

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ table, th, td {
 
 table {
 	width: 25%;
+	height: 25%;
 }
 
 g[class='note'] {
